@@ -4,10 +4,15 @@ Revision history for libapreq-1
 
 =item 1.34 
 
+have fill_buffer() completely fill the multipart_buffer.  This
+bug is tickled by the FireFox 2.0 when doing ssl uploads:
+
+  https://bugzilla.mozilla.org/show_bug.cgi?id=356470
+  https://bugzilla.mozilla.org/show_bug.cgi?id=369414
+
 move the mod_perl version detection to the top of Makefile.PL, so
 Apache-Test and other things won't fool around with %INC and confuse
 the detection code. [Stas]
-
 
 
 =item 1.33 - December 15, 2004
